Added code for question3:Statistics on rating column

--- a/Jupyter Notebooks/Day10.ipynb
+++ b/Jupyter Notebooks/Day10.ipynb
@@ -181,6 +181,39 @@
     "print(app_cleaned.head(5))\n",
     "print(app_cleaned.tail(5))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "86d360d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           category  mean_rating  median_rating  std_rating\n",
+      "0         Education     4.380000           4.30    0.376829\n",
+      "1     Entertainment     4.220000           4.20    0.511859\n",
+      "2             Games     4.192308           4.50    0.920563\n",
+      "3  Health & Fitness     4.285714           4.30    0.384831\n",
+      "4         Lifestyle     4.025000           4.05    0.170783\n",
+      "5      Productivity     3.780000           3.80    0.192354\n",
+      "6         Utilities     3.725000           3.65    0.718215\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question One: Data cleaning for rating column\n",
+    "app_ratings['rating_clean'] = (app_ratings['rating'].str.strip().str.replace(',', '.', regex=False))\n",
+    "\n",
+    "app_ratings['rating_clean'] = pd.to_numeric(app_ratings['rating_clean'], errors='coerce')\n",
+    "\n",
+    "# Question Three: Grouping by category and calculating statistics\n",
+    "category_stats = app_ratings.groupby('category').agg(mean_rating=('rating_clean', 'mean'), median_rating=('rating_clean', 'median'), std_rating=('rating_clean', 'std')).reset_index()\n",
+    "\n",
+    "print(category_stats)\n"
+   ]
   }
  ],
  "metadata": {
