Added code for question 2:Average transaction amount for transactions occuring in November 2024

--- a/Jupyter Notebooks/Day11.ipynb
+++ b/Jupyter Notebooks/Day11.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "18c438a7",
    "metadata": {},
    "outputs": [
@@ -112,6 +112,30 @@
     "unaccepted_count = (~trxn_Oct_2024['is_accepted']).sum()\n",
     "\n",
     "print(f\"Number of transactions in October 2024 with unaccepted domains: {unaccepted_count}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "708f25fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "180.15\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question Two\n",
+    "# Average transaction amount for transactions occurring in November 2024\n",
+    "trxn_Nov_2024 = fct_transactions[(fct_transactions['transaction_date'].dt.year == 2024) & (fct_transactions['transaction_date'].dt.month == 11)]\n",
+    "\n",
+    "# Cleaning transaction amount column\n",
+    "trxn_Nov_2024_cleaned = trxn_Nov_2024['transaction_amount'].fillna(0).mean()\n",
+    "print(trxn_Nov_2024_cleaned)"
    ]
   }
  ],
