--- a/Jupyter Notebooks/Day7.ipynb
+++ b/Jupyter Notebooks/Day7.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "e6879d9e",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "b123e921",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "61ab7170",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "516f29ab",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "10e02992",
    "metadata": {},
    "outputs": [
@@ -154,11 +154,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
       "   celebrity_id  product_id  sale_amount\n",
       "2           102         902      3800.50\n",
       "4           103         903      3700.75\n",
       "6           105         905      2500.00\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\enock\\AppData\\Local\\Temp\\ipykernel_9208\\3463303698.py:4: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  fct_sales_q1_2025['sale_amount'] = fct_sales_q1_2025['sale_amount'].fillna(0)\n"
      ]
     }
    ],
@@ -171,6 +182,74 @@
     "# Group by both celebrity and product\n",
     "top3_celebrity_collaborations = ( fct_sales_q1_2025.groupby(['celebrity_id', 'product_id'])['sale_amount'].sum().reset_index().sort_values(by='sale_amount', ascending=False).head(3))\n",
     "print(top3_celebrity_collaborations)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d61fa99d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jessa\n",
+      "1178\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create a dictionary named person\n",
+    "person = {\"name\": \"Jessa\", \"country\": \"USA\", \"telephone\": 1178}\n",
+    "\n",
+    "# access value using key name in []\n",
+    "print(person['name'])\n",
+    "# Output 'Jessa'\n",
+    "\n",
+    "#  get key value using key name in get()\n",
+    "print(person.get('telephone'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7a02b8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Canada\n",
+      "USA\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "person = {\"name\": \"Jessa\", \"country\": \"USA\"}\n",
+    "\n",
+    "# updating the country name\n",
+    "person[\"country\"] = \"Canada\"\n",
+    "# print the updated country\n",
+    "print(person['country'])\n",
+    "# Output 'Canada'\n",
+    "\n",
+    "# updating the country name using update() method\n",
+    "person.update({\"country\": \"USA\"})\n",
+    "# print the updated country\n",
+    "print(person['country'])"
    ]
   }
  ],
