Added code for question 3

--- a/Jupyter Notebooks/Day11.ipynb
+++ b/Jupyter Notebooks/Day11.ipynb
@@ -137,6 +137,140 @@
     "trxn_Nov_2024_cleaned = trxn_Nov_2024['transaction_amount'].fillna(0).mean()\n",
     "print(trxn_Nov_2024_cleaned)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "8d58b014",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "day_of_week\n",
+      "Monday     1\n",
+      "Tuesday    1\n",
+      "Name: count, dtype: int64\n",
+      "Day with the highest high-risk transactions: Monday (1 transactions)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question Three\n",
+    "# 0. Merging based on transaction_id\n",
+    "dim_risk_flags = pd.read_csv(r'D:\\Data Journey\\Python-Summer-Party\\DataSets\\dim_risk_flags.csv') \n",
+    "merged = pd.merge(fct_transactions, dim_risk_flags, on='transaction_id')\n",
+    "# 1. Filtering for only high risk\n",
+    "merged_high_risk = merged[merged['risk_level'] == 'High']\n",
+    "# 2. Filtering for transactions in December 2024.\n",
+    "dec_high_risk = merged_high_risk[(merged_high_risk['transaction_date'].dt.year == 2024) & (merged_high_risk['transaction_date'].dt.month == 12)]\n",
+    "\n",
+    "# 3. Extract the day of the week as a name\n",
+    "dec_high_risk['day_of_week'] = dec_high_risk['transaction_date'].dt.day_name()\n",
+    "\n",
+    "# 2. Count the number of high-risk transactions per day\n",
+    "high_risk_counts = dec_high_risk['day_of_week'].value_counts()\n",
+    "\n",
+    "# 3. Find the day with the highest count\n",
+    "most_high_risk_day = high_risk_counts.idxmax()\n",
+    "most_high_risk_count = high_risk_counts.max()\n",
+    "\n",
+    "print(high_risk_counts)\n",
+    "print(f\"Day with the highest high-risk transactions: {most_high_risk_day} ({most_high_risk_count} transactions)\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09a02b67",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\enock\\AppData\\Local\\Temp\\ipykernel_3064\\2610278145.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  merged_high_risk['transaction_date'] = pd.to_datetime(merged_high_risk['transaction_date'])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>customer_email</th>\n",
+       "      <th>transaction_id</th>\n",
+       "      <th>transaction_date</th>\n",
+       "      <th>transaction_amount</th>\n",
+       "      <th>fraud_detection_score</th>\n",
+       "      <th>risk_level</th>\n",
+       "      <th>risk_flag_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>laura@riskmail.com</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2024-12-02</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>80</td>\n",
+       "      <td>High</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>mike@securepay.com</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2024-12-03</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>85</td>\n",
+       "      <td>High</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       customer_email  transaction_id transaction_date  transaction_amount  \\\n",
+       "3  laura@riskmail.com              11       2024-12-02               100.0   \n",
+       "4  mike@securepay.com              12       2024-12-03               180.0   \n",
+       "\n",
+       "   fraud_detection_score risk_level  risk_flag_id  \n",
+       "3                     80       High             3  \n",
+       "4                     85       High             4  "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
