Added code for question 2

--- a/Jupyter Notebooks/Day12.ipynb
+++ b/Jupyter Notebooks/Day12.ipynb
@@ -102,6 +102,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a7702282",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  customer_id  month  return_count\n",
+      "0     CUST001      1             2\n",
+      "1     CUST001      3             1\n",
+      "2     CUST001      6             1\n",
+      "3     CUST001      7             2\n",
+      "4     CUST001      8             1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question Two\n",
+    "# 1. Convert 'order_date' to datetime\n",
+    "customer_returns['order_date'] = pd.to_datetime(customer_returns['order_date'], errors='coerce')\n",
+    "\n",
+    "# 2. Set a MultiIndex using 'customer_id' and 'order_date'\n",
+    "customer_returns_multi = customer_returns.set_index(['customer_id', 'order_date'])\n",
+    "\n",
+    "# 3. Extract month from the order_date (we can access it even in the MultiIndex)\n",
+    "customer_returns_multi['month'] = customer_returns_multi.index.get_level_values('order_date').month\n",
+    "\n",
+    "# 4. Filter only rows where return_flag is True\n",
+    "returns_only = customer_returns_multi[customer_returns_multi['return_flag'] == True]\n",
+    "\n",
+    "# 5. Group by customer and month, and count number of returns\n",
+    "grouped = returns_only.groupby(['customer_id', 'month']).size().reset_index(name='return_count')\n",
+    "\n",
+    "print(grouped.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "27c6ad88",
    "metadata": {},
    "outputs": [],
