Added code for question 2:Average customer rating for each milk flavor.

--- a/Jupyter Notebooks/Day13.ipynb
+++ b/Jupyter Notebooks/Day13.ipynb
@@ -1095,7 +1095,7 @@
     }
    ],
    "source": [
-    "# Question Two\n",
+    "# Question Two : average customer rating for each milk flavor\n",
     "# 0. Start from original DataFrame and drop duplicates\n",
     "milkshake_ratings_cleaned = milkshake_ratings.drop_duplicates().copy()\n",
     "\n",
