Added code for question2;Average transaction count for loyalty and non members

--- a/Jupyter Notebooks/Day14.ipynb
+++ b/Jupyter Notebooks/Day14.ipynb
@@ -143,6 +143,40 @@
     "comparative = July_2024.groupby('is_loyalty_member')['transaction_id'].count().reset_index(name='transaction_count')\n",
     "comparative.head(4)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "4995e197",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   is_loyalty_member  avg_transaction_value\n",
+      "0                  0               4.700000\n",
+      "1                  1               8.642857\n",
+      "Loyalty program members have a higher average transaction value.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question Two\n",
+    "# 0.Make sure transaction_value is numeric\n",
+    "July_2024['transaction_value'] = pd.to_numeric(July_2024['transaction_value'], errors='coerce')\n",
+    "\n",
+    "# 1.Calculate average transaction value by membership\n",
+    "avg_transaction_value = July_2024.groupby('is_loyalty_member')['transaction_value'].mean().reset_index(name='avg_transaction_value')\n",
+    "print(avg_transaction_value)\n",
+    "\n",
+    "# 2.Identify which group has higher average transaction value\n",
+    "if avg_transaction_value.loc[avg_transaction_value['is_loyalty_member'] == 1, 'avg_transaction_value'].values[0] > \\\n",
+    "   avg_transaction_value.loc[avg_transaction_value['is_loyalty_member'] == 0, 'avg_transaction_value'].values[0]:\n",
+    "    print(\"Loyalty program members have a higher average transaction value.\")\n",
+    "else:\n",
+    "    print(\"Non-members have a higher average transaction value.\")"
+   ]
   }
  ],
  "metadata": {
