Added code for question3;percentage difference btwn averages of loyalty members and non members

--- a/Jupyter Notebooks/Day14.ipynb
+++ b/Jupyter Notebooks/Day14.ipynb
@@ -177,6 +177,42 @@
     "else:\n",
     "    print(\"Non-members have a higher average transaction value.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "611983eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Loyalty Members: 8.64\n",
+      "Average Non-Members: 4.70\n",
+      "Percentage Difference: 83.89%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question Three\n",
+    "# Calculate averages by loyalty status\n",
+    "avg_values = July_2024.groupby('is_loyalty_member')['transaction_value'].mean()\n",
+    "\n",
+    "# Extract averages\n",
+    "avg_loyalty = avg_values.get(1, 0)   # loyalty members\n",
+    "avg_non = avg_values.get(0, 0)       # non-members\n",
+    "\n",
+    "# Calculate percentage difference (using non-members as baseline)\n",
+    "if avg_non > 0:\n",
+    "    pct_diff = ((avg_loyalty - avg_non) / avg_non) * 100\n",
+    "else:\n",
+    "    pct_diff = None  # avoid division by zero\n",
+    "\n",
+    "print(f\"Average Loyalty Members: {avg_loyalty:.2f}\")\n",
+    "print(f\"Average Non-Members: {avg_non:.2f}\")\n",
+    "print(f\"Percentage Difference: {pct_diff:.2f}%\")\n"
+   ]
   }
  ],
  "metadata": {
