Added code for question2

--- a/Jupyter Notebooks/Day15.ipynb
+++ b/Jupyter Notebooks/Day15.ipynb
@@ -82,11 +82,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "3590f417",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average driver earnings per completed UberPool ride (with >2 riders) between July–Sept 2024: 30.50\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question One\n",
+    "# Average driver earnings per completed UberPool ride with more than two riders between July 1st and September 30th, 2024\n",
+    "# 0.Converting trip_date to datetime datatype and filtering for July 1st & Sept 30th 2024\n",
+    "fct_trips['trip_date'] = pd.to_datetime(fct_trips['trip_date'], errors='coerce')\n",
+    "July_Sept_2024_trips = fct_trips[(fct_trips['trip_date'] >= '2024-07-01')& (fct_trips['trip_date'] <= '2024-09-30')]\n",
+    "July_Sept_2024_trips\n",
+    "\n",
+    "# 1. Filtering for UberPool type\n",
+    "Uberpool_Filtered = July_Sept_2024_trips[(July_Sept_2024_trips['ride_type'] == 'UberPool') & (July_Sept_2024_trips['rider_count']> 2)]\n",
+    "Avg_Earnings = Uberpool_Filtered['total_earnings'].mean()\n",
+    "\n",
+    "print(f\"Average driver earnings per completed UberPool ride (with >2 riders) between July–Sept 2024: {Avg_Earnings:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "2ab5a63f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average earnings per mile for completed UberPool rides with >2 riders (July–Sept 2024): 2.45\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question Two\n",
+    "# 0. Filter July 1 - Sept 30, 2024 and add earnings_per_mile column\n",
+    "July_Sept_2024_trips = fct_trips[(fct_trips['trip_date'] >= '2024-07-01') &(fct_trips['trip_date'] <= '2024-09-30')].copy()\n",
+    "\n",
+    "July_Sept_2024_trips['earnings_per_mile'] = (July_Sept_2024_trips['total_earnings'] / July_Sept_2024_trips['total_distance'])\n",
+    "\n",
+    "# 1. Filter for completed UberPool rides with >2 riders\n",
+    "uberpool_filtered = July_Sept_2024_trips[(July_Sept_2024_trips['ride_type'] == 'UberPool') & (July_Sept_2024_trips['rider_count'] > 2)]\n",
+    "\n",
+    "# 2. Compute average earnings per mile\n",
+    "avg_earnings_per_mile = uberpool_filtered['earnings_per_mile'].mean()\n",
+    "\n",
+    "print(f\"Average earnings per mile for completed UberPool rides with >2 riders (July–Sept 2024): {avg_earnings_per_mile:.2f}\")\n"
+   ]
   }
  ],
  "metadata": {
