Added code for question 3

--- a/Jupyter Notebooks/Day15.ipynb
+++ b/Jupyter Notebooks/Day15.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "2ab5a63f",
    "metadata": {},
    "outputs": [
@@ -137,6 +137,42 @@
     "avg_earnings_per_mile = uberpool_filtered['earnings_per_mile'].mean()\n",
     "\n",
     "print(f\"Average earnings per mile for completed UberPool rides with >2 riders (July–Sept 2024): {avg_earnings_per_mile:.2f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "17b6612a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimal combination for max driver earnings per UberPool ride:\n",
+      "rider_count        5.0\n",
+      "total_distance    20.0\n",
+      "total_earnings    50.0\n",
+      "Name: 8, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Filter for UberPool rides between July 1st and Sept 30th, 2024\n",
+    "July_Sept_2024_trips = fct_trips[\n",
+    "    (fct_trips['trip_date'] >= '2024-07-01') &\n",
+    "    (fct_trips['trip_date'] <= '2024-09-30') &\n",
+    "    (fct_trips['ride_type'] == 'UberPool')\n",
+    "].copy()\n",
+    "\n",
+    "# Group by rider_count and total_distance to calculate average total earnings\n",
+    "grouped = July_Sept_2024_trips.groupby(['rider_count', 'total_distance'])['total_earnings'].mean().reset_index()\n",
+    "\n",
+    "# Find the combination with the highest average total earnings\n",
+    "max_avg_earning_row = grouped.loc[grouped['total_earnings'].idxmax()]\n",
+    "\n",
+    "print(\"Optimal combination for max driver earnings per UberPool ride:\")\n",
+    "print(max_avg_earning_row)\n"
    ]
   }
  ],
